--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,8 +1,8 @@
-* {
+/* * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-}
+} */
 
 html {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
@@ -14,4 +14,10 @@ a {
   text-decoration: none;
   color: inherit;
   cursor: pointer;
+}
+
+.logo {
+  width: 50px;
+  height: 50px;
+  object-fit: cover;
 }
