--- a/client/src/index.css
+++ b/client/src/index.css
@@ -10,6 +10,11 @@ html {
   scroll-behavior: smooth;
 }
 
+body {
+  max-width: 100vw;
+  overflow: hidden;
+}
+
 a {
   text-decoration: none;
   color: inherit;
@@ -20,4 +25,18 @@ a {
   width: 50px;
   height: 50px;
   object-fit: cover;
+}
+
+.home__bg {
+  background-image: url("../public/assets/images/home-gb.avif");
+  height: 90vh;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  overflow: hidden;
+}
+
+.home-message-icon {
+  margin-left: 10px;
+  display: inline-block;
 }
