finished building the login page

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -28,7 +28,7 @@ a {
 }
 
 .home__bg {
-  background-image: url("../public/assets/images/home-gb.avif");
+  background-image: url(https://images.unsplash.com/photo-1529156069898-49953e39b3ac?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1932&q=80);
   height: 90vh;
   background-position: center;
   background-size: cover;
@@ -39,4 +39,18 @@ a {
 .home-message-icon {
   margin-left: 10px;
   display: inline-block;
+}
+
+.login__bg {
+  background-image: url(https://images.unsplash.com/photo-1577563908411-5077b6dc7624?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1740&q=80);
+  height: 92vh;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  overflow-x: hidden;
+}
+
+.login-form {
+  width: 80%;
+  max-width: 500px;
 }
