--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,7 +11,6 @@ body {
 
 a {
   text-decoration: none;
-  color: inherit;
   cursor: pointer;
 }
 
@@ -48,6 +47,7 @@ a {
   width: 80%;
   max-width: 500px;
 }
+
 .register__bg {
   background-image: url(https://images.unsplash.com/photo-1622556498246-755f44ca76f3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MzJ8fG1lc3NhZ2UlMjBhcHB8ZW58MHx8MHx8&auto=format&fit=crop&w=800&q=60);
   height: 92vh;
@@ -55,4 +55,77 @@ a {
   background-size: cover;
   background-repeat: no-repeat;
   overflow-x: hidden;
+}
+
+.btn-send-msg {
+  width: 100%;
+  height: 100%;
+  background-color: #ffa500;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.messages-output {
+  height: 75vh;
+  border: 1px solid #d3d3d3;
+  overflow-y: auto;
+  margin-bottom: 20px;
+}
+
+.message-inner {
+  margin-left: 20px;
+  margin-bottom: 10px;
+  padding: 10px;
+  min-width: 200px;
+  max-width: 90%;
+  text-align: left;
+  min-height: 80px;
+  font: 400 1em, sans-serif;
+  display: inline-block;
+  border-radius: 10px;
+  background-color: #d1e7dd;
+}
+
+.incoming-message .message-inner {
+  background-color: #ffdab9;
+}
+
+.incoming-message {
+  display: flex;
+  justify-content: flex-end;
+  margin-right: 20px;
+}
+
+.message-timestamp-left {
+  font-size: 0.85em;
+  font-weight: 300;
+  margin-top: 10px;
+}
+
+.message-sender {
+  margin-bottom: 5px;
+  font-weight: bold;
+}
+
+.message-date-indicator {
+  width: 150px;
+  margin: 0 auto;
+}
+
+.conversation-info {
+  padding: 0;
+  margin: 0 auto;
+  text-align: center;
+  height: 100px;
+}
+
+.conversation-profile-pic {
+  width: 60px;
+  height: 60px;
+  object-fit: cover;
+  margin: 10px auto;
+  margin-bottom: 30px;
+  border-radius: 50%;
+  margin-left: 10px;
 }
